--- a/QuizAppMobile/RegisterPage.xaml
+++ b/QuizAppMobile/RegisterPage.xaml
@@ -3,10 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuizAppMobile.RegisterPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+        <StackLayout VerticalOptions="Center">
+            <Entry Placeholder="Username" Margin="20,0,20,10"/>
+            <Entry Placeholder="Email" Keyboard="Email" Margin="20,0,20,10"/>
+            <Entry Placeholder="Password" IsPassword="True" Margin="20,0,20,10"/>
+            <Entry Placeholder="Password" IsPassword="True" Margin="20,0"/>
+            <Button Text="Register" Padding="0" Margin="50,20,50,0" TextColor="White" 
+                BorderColor="{StaticResource Key=ButtonBorderPrimary}"
+                BackgroundColor="{StaticResource Key=ButtonBackgroundPrimary}"
+                Clicked="Button_Clicked_Register"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
