--- a/QuizAppMobile/Views/StartPage.xaml
+++ b/QuizAppMobile/Views/StartPage.xaml
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:QuizAppMobile.ViewModels"
              x:Class="QuizAppMobile.StartPage">
+
+    <ContentPage.BindingContext>
+        <viewmodels:StartVM/>
+    </ContentPage.BindingContext>
 
     <StackLayout VerticalOptions="Center">
         <Label Text="Welcome in QuizzApp!" HorizontalOptions="Center" FontSize="35" TextColor="{StaticResource Key=Primary}" Margin="0,0,0,40" FontAttributes="Bold"/>
         <Button Text="Login" Padding="0" Margin="50,0" TextColor="White" 
                 BorderColor="{StaticResource Key=ButtonBorderPrimary}"
                 BackgroundColor="{StaticResource Key=ButtonBackgroundPrimary}"
-                Clicked="Button_Clicked_Login"/>
+                Command="{Binding Login}"/>
         <Label Text="Or" HorizontalOptions="Center" FontSize="Medium"/>
         <Button Text="Register" Margin="50,0"
-                Clicked="Button_Clicked_Register"/>
+                Command="{Binding Register}"/>
     </StackLayout>
 
 </ContentPage>
